--- a/index.html
+++ b/index.html
@@ -1,62 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Idle Tycoon Games Hub</title>
+
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+<!-- AOS Animation Library -->
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 <style>
+    /* ===== Reset & Base ===== */
+    * {margin:0; padding:0; box-sizing:border-box;}
     body {
-        margin: 0;
         font-family: 'Poppins', sans-serif;
-        background: #0e0e10;
-        color: #f5f5f5;
+        background: #0d0d12;
+        color: #fff;
+        overflow-x: hidden;
     }
-    header {
-        text-align: center;
-        padding: 60px 20px 40px;
+
+    /* ===== Navbar ===== */
+    nav {
+        position: fixed;
+        top:0; left:0; width:100%;
+        background: rgba(15,15,20,0.85);
+        backdrop-filter: blur(10px);
+        display: flex; justify-content: space-between; align-items: center;
+        padding: 15px 50px;
+        z-index:1000;
+    }
+    nav h2 {
+        font-size: 1.5rem;
         background: linear-gradient(135deg, #00f5a0, #00d9f5);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+        font-weight:700;
+    }
+    nav a {
+        color: #fff;
+        text-decoration: none;
+        font-weight:600;
+        margin-left: 20px;
+        transition: color 0.3s;
+    }
+    nav a:hover { color: #00d9f5; }
+
+    /* ===== Hero Section ===== */
+    header {
+        height: 90vh;
+        display: flex; flex-direction: column;
+        align-items: center; justify-content: center;
+        text-align: center;
+        background: linear-gradient(135deg,#111,#0d0d12);
+        background-size: 400% 400%;
+        animation: gradientBG 15s ease infinite;
+        padding: 20px;
     }
     header h1 {
-        font-size: 2.6rem;
-        margin: 0 0 15px;
+        font-size: 3rem;
         font-weight: 700;
+        background: linear-gradient(135deg, #00f5a0, #00d9f5);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        margin-bottom: 20px;
     }
     header p {
-        color: #aaa;
-        font-size: 1.1rem;
+        color: #bbb;
+        font-size: 1.2rem;
+        max-width: 700px;
+        line-height: 1.6;
     }
+    @keyframes gradientBG {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+
+    /* ===== Games Section ===== */
     .games-section {
-        max-width: 1200px;
+        max-width: 1300px;
         margin: auto;
-        padding: 30px 20px 60px;
+        padding: 100px 20px;
     }
     .games-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-        gap: 25px;
+        grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+        gap: 35px;
     }
     .game-card {
-        background: #18181b;
-        border-radius: 16px;
+        background: #18181f;
+        border-radius: 20px;
         overflow: hidden;
-        display: flex;
-        flex-direction: column;
-        box-shadow: 0 6px 18px rgba(0,0,0,0.5);
-        transition: transform 0.25s ease, box-shadow 0.25s ease;
+        box-shadow: 0 8px 25px rgba(0,0,0,0.6);
+        transition: transform 0.3s, box-shadow 0.3s;
+        position: relative;
     }
     .game-card:hover {
-        transform: translateY(-8px);
-        box-shadow: 0 12px 25px rgba(0,0,0,0.7);
-    }
-    .game-image {
-        position: relative;
-        overflow: hidden;
+        transform: translateY(-12px) scale(1.02);
+        box-shadow: 0 15px 35px rgba(0,217,245,0.4);
     }
     .game-image img {
         width: 100%;
-        height: 200px;
+        height: 220px;
         object-fit: cover;
         display: block;
         transition: transform 0.4s ease;
@@ -66,62 +113,77 @@
         transform: scale(1.08);
     }
     .game-content {
-        padding: 20px;
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+        padding: 25px;
     }
     .game-content h2 {
-        margin: 0 0 10px;
         font-size: 1.4rem;
         color: #00d9f5;
+        margin-bottom: 12px;
     }
     .game-content p {
-        flex: 1;
-        color: #bbb;
+        color: #aaa;
         font-size: 0.95rem;
-        line-height: 1.5;
+        line-height: 1.6;
+        min-height: 70px;
     }
     .download-btn {
         display: inline-block;
-        margin-top: 15px;
-        padding: 12px 20px;
+        margin-top: 20px;
+        padding: 12px 24px;
+        border-radius: 12px;
         background: linear-gradient(135deg, #00f5a0, #00d9f5);
-        color: #0e0e10;
-        font-weight: bold;
-        border-radius: 10px;
+        color: #0d0d12;
+        font-weight: 700;
         text-decoration: none;
-        text-align: center;
         transition: 0.25s;
-        box-shadow: 0 4px 10px rgba(0,217,245,0.3);
+        box-shadow: 0 5px 15px rgba(0,217,245,0.3);
     }
     .download-btn:hover {
-        opacity: 0.9;
-        transform: translateY(-2px);
-        box-shadow: 0 6px 15px rgba(0,217,245,0.5);
+        transform: translateY(-3px);
+        box-shadow: 0 8px 20px rgba(0,217,245,0.5);
     }
+
+    /* ===== Footer ===== */
     footer {
-        text-align: center;
-        padding: 30px 20px;
-        color: #777;
-        font-size: 0.85rem;
-        background: #0c0c0e;
+        text-align:center;
+        padding:40px 20px;
+        background:#0b0b0f;
+        color:#777;
+        font-size:0.9rem;
+        margin-top: 40px;
+    }
+
+    /* ===== Responsive Navbar ===== */
+    @media(max-width:768px){
+        nav{flex-direction: column;}
+        nav a{margin:10px 0;}
+        header h1{font-size:2.2rem;}
     }
 </style>
 </head>
 <body>
 
+<!-- Navbar -->
+<nav>
+    <h2>Idle Tycoon Hub</h2>
+    <div>
+        <a href="#games">Games</a>
+        <a href="#contact">Contact</a>
+    </div>
+</nav>
+
+<!-- Hero -->
 <header>
-    <h1>🎮 Idle Tycoon Games Hub</h1>
-    <p>Choose your game, grow your empire, and keep earning while you’re offline.</p>
+    <h1>Build Your Empire. Earn While Idle.</h1>
+    <p>Discover the best Idle Tycoon games. Manage, upgrade, and grow your empire while having fun. Download now and start building!</p>
 </header>
 
+<!-- Games Section -->
 <section class="games-section" id="games">
     <div class="games-grid">
 
         <!-- Idle Miner Tycoon -->
-        <div class="game-card">
+        <div class="game-card" data-aos="fade-up">
             <div class="game-image">
                 <a href="https://appslocked.com/cl/i/qk7gn4">
                     <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/logo.png" alt="Idle Miner Tycoon">
@@ -130,12 +192,12 @@
             <div class="game-content">
                 <h2>Idle Miner Tycoon</h2>
                 <p>Automate your mines, hire managers, and scale production. Optimize logistics and watch profits grow endlessly.</p>
-                <a href="https://appslocked.com/cl/i/qk7gn4" class="download-btn">⬇️ Download</a>
+                <a href="https://appslocked.com/cl/i/qk7gn4" class="download-btn">⬇ Download</a>
             </div>
         </div>
 
         <!-- Prison Empire Tycoon -->
-        <div class="game-card">
+        <div class="game-card" data-aos="fade-up" data-aos-delay="150">
             <div class="game-image">
                 <a href="https://appverification.net/cl/i/xpvvkj">
                     <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/unnamed.jpg" alt="Prison Empire Tycoon">
@@ -144,12 +206,12 @@
             <div class="game-content">
                 <h2>Prison Empire Tycoon</h2>
                 <p>Build and upgrade your prison. Manage staff, keep order, and expand your empire while maximizing income.</p>
-                <a href="https://appverification.net/cl/i/xpvvkj" class="download-btn">⬇️ Download</a>
+                <a href="https://appverification.net/cl/i/xpvvkj" class="download-btn">⬇ Download</a>
             </div>
         </div>
 
         <!-- Idle Police Tycoon -->
-        <div class="game-card">
+        <div class="game-card" data-aos="fade-up" data-aos-delay="300">
             <div class="game-image">
                 <a href="https://appinstallcheck.com/cl/i/1x55kk">
                     <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/i.jpeg" alt="Idle Police Tycoon">
@@ -158,12 +220,12 @@
             <div class="game-content">
                 <h2>Idle Police Tycoon</h2>
                 <p>Manage a police station, respond to cases, upgrade facilities, and protect the city while growing profits.</p>
-                <a href="https://appinstallcheck.com/cl/i/1x55kk" class="download-btn">⬇️ Download</a>
+                <a href="https://appinstallcheck.com/cl/i/1x55kk" class="download-btn">⬇ Download</a>
             </div>
         </div>
 
         <!-- Idle Barber Shop Tycoon -->
-        <div class="game-card">
+        <div class="game-card" data-aos="fade-up" data-aos-delay="450">
             <div class="game-image">
                 <a href="https://appverification.net/cl/i/o4xxd4">
                     <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/IMG_20250816_000958.jpg" alt="Idle Barber Shop Tycoon">
@@ -172,16 +234,25 @@
             <div class="game-content">
                 <h2>Idle Barber Shop Tycoon</h2>
                 <p>Run your own barbershop, attract customers, upgrade tools, and build a stylish empire in the city.</p>
-                <a href="https://appverification.net/cl/i/o4xxd4" class="download-btn">⬇️ Download</a>
+                <a href="https://appverification.net/cl/i/o4xxd4" class="download-btn">⬇ Download</a>
             </div>
         </div>
 
     </div>
 </section>
 
-<footer>
+<!-- Footer -->
+<footer id="contact">
     © 2025 Idle Tycoon Hub. All rights reserved.
 </footer>
 
+<!-- AOS Script -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 1000,
+    once: true
+  });
+</script>
 </body>
 </html>
