--- a/index.html
+++ b/index.html
@@ -1,258 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Idle Tycoon Games Hub</title>
-
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-
-<!-- AOS Animation Library -->
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Idle Tycoon Hub</title>
 <style>
-    /* ===== Reset & Base ===== */
-    * {margin:0; padding:0; box-sizing:border-box;}
     body {
+        margin: 0;
         font-family: 'Poppins', sans-serif;
-        background: #0d0d12;
-        color: #fff;
+        background: linear-gradient(135deg, #0f0f0f, #1b1f29);
+        color: white;
         overflow-x: hidden;
     }
-
-    /* ===== Navbar ===== */
-    nav {
-        position: fixed;
-        top:0; left:0; width:100%;
-        background: rgba(15,15,20,0.85);
-        backdrop-filter: blur(10px);
-        display: flex; justify-content: space-between; align-items: center;
-        padding: 15px 50px;
-        z-index:1000;
-    }
-    nav h2 {
-        font-size: 1.5rem;
-        background: linear-gradient(135deg, #00f5a0, #00d9f5);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        font-weight:700;
-    }
-    nav a {
-        color: #fff;
-        text-decoration: none;
-        font-weight:600;
-        margin-left: 20px;
-        transition: color 0.3s;
-    }
-    nav a:hover { color: #00d9f5; }
-
-    /* ===== Hero Section ===== */
     header {
-        height: 90vh;
-        display: flex; flex-direction: column;
-        align-items: center; justify-content: center;
+        min-height: 85vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         text-align: center;
-        background: linear-gradient(135deg,#111,#0d0d12);
-        background-size: 400% 400%;
-        animation: gradientBG 15s ease infinite;
-        padding: 20px;
+        padding: 0 20px;
+        background: url('https://images.unsplash.com/photo-1605902711622-cfb43c4437a9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1400&q=80') no-repeat center/cover;
+        position: relative;
+    }
+    header::after {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: rgba(0,0,0,0.65);
+    }
+    header h1, header p, .hero-btn {
+        position: relative;
+        z-index: 2;
     }
     header h1 {
-        font-size: 3rem;
-        font-weight: 700;
-        background: linear-gradient(135deg, #00f5a0, #00d9f5);
+        font-size: 2.5rem;
+        font-weight: bold;
+        background: linear-gradient(90deg,#00f5a0,#00d9f5);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
     }
     header p {
-        color: #bbb;
-        font-size: 1.2rem;
-        max-width: 700px;
-        line-height: 1.6;
+        font-size: 1.1rem;
+        color: #ddd;
+        max-width: 600px;
+        margin: 0 auto 20px;
     }
-    @keyframes gradientBG {
-        0%{background-position:0% 50%}
-        50%{background-position:100% 50%}
-        100%{background-position:0% 50%}
+    .hero-btn {
+        padding: 12px 24px;
+        background: linear-gradient(90deg,#00f5a0,#00d9f5);
+        color: black;
+        font-weight: bold;
+        text-decoration: none;
+        border-radius: 8px;
+        transition: transform 0.3s ease;
     }
-
-    /* ===== Games Section ===== */
-    .games-section {
-        max-width: 1300px;
+    .hero-btn:hover {
+        transform: scale(1.08);
+    }
+    section {
+        padding: 60px 20px;
+        max-width: 1200px;
         margin: auto;
-        padding: 100px 20px;
     }
     .games-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
-        gap: 35px;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 25px;
     }
     .game-card {
-        background: #18181f;
-        border-radius: 20px;
+        background: rgba(255,255,255,0.05);
+        border-radius: 16px;
         overflow: hidden;
-        box-shadow: 0 8px 25px rgba(0,0,0,0.6);
-        transition: transform 0.3s, box-shadow 0.3s;
-        position: relative;
+        backdrop-filter: blur(10px);
+        box-shadow: 0 6px 20px rgba(0,0,0,0.5);
+        transition: transform 0.3s ease;
+        opacity: 0;
+        transform: translateY(40px);
+        animation: fadeUp 1s forwards;
     }
-    .game-card:hover {
-        transform: translateY(-12px) scale(1.02);
-        box-shadow: 0 15px 35px rgba(0,217,245,0.4);
+    .game-card:nth-child(2){animation-delay:0.2s}
+    .game-card:nth-child(3){animation-delay:0.4s}
+    .game-card:nth-child(4){animation-delay:0.6s}
+    @keyframes fadeUp {
+        to {opacity: 1; transform: translateY(0);}
     }
-    .game-image img {
+    .game-card img {
         width: 100%;
-        height: 220px;
+        height: 200px;
         object-fit: cover;
-        display: block;
-        transition: transform 0.4s ease;
         cursor: pointer;
     }
-    .game-card:hover .game-image img {
-        transform: scale(1.08);
-    }
     .game-content {
-        padding: 25px;
+        padding: 15px;
+        text-align: center;
     }
     .game-content h2 {
+        margin: 10px 0;
         font-size: 1.4rem;
         color: #00d9f5;
-        margin-bottom: 12px;
     }
     .game-content p {
-        color: #aaa;
-        font-size: 0.95rem;
-        line-height: 1.6;
-        min-height: 70px;
+        font-size: 0.9rem;
+        color: #ccc;
+        min-height: 60px;
     }
     .download-btn {
         display: inline-block;
-        margin-top: 20px;
-        padding: 12px 24px;
-        border-radius: 12px;
-        background: linear-gradient(135deg, #00f5a0, #00d9f5);
-        color: #0d0d12;
-        font-weight: 700;
+        margin-top: 12px;
+        padding: 10px 18px;
+        background: linear-gradient(90deg,#00f5a0,#00d9f5);
+        color: black;
+        font-weight: bold;
+        border-radius: 8px;
         text-decoration: none;
-        transition: 0.25s;
-        box-shadow: 0 5px 15px rgba(0,217,245,0.3);
+        transition: transform 0.25s;
     }
     .download-btn:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 8px 20px rgba(0,217,245,0.5);
-    }
-
-    /* ===== Footer ===== */
-    footer {
-        text-align:center;
-        padding:40px 20px;
-        background:#0b0b0f;
-        color:#777;
-        font-size:0.9rem;
-        margin-top: 40px;
-    }
-
-    /* ===== Responsive Navbar ===== */
-    @media(max-width:768px){
-        nav{flex-direction: column;}
-        nav a{margin:10px 0;}
-        header h1{font-size:2.2rem;}
+        transform: scale(1.05);
     }
 </style>
 </head>
 <body>
 
-<!-- Navbar -->
-<nav>
-    <h2>Idle Tycoon Hub</h2>
-    <div>
-        <a href="#games">Games</a>
-        <a href="#contact">Contact</a>
-    </div>
-</nav>
-
-<!-- Hero -->
 <header>
     <h1>Build Your Empire. Earn While Idle.</h1>
-    <p>Discover the best Idle Tycoon games. Manage, upgrade, and grow your empire while having fun. Download now and start building!</p>
+    <p>Discover the best Idle Tycoon games. Manage, upgrade, and grow your empire while having fun. Start now and build your legacy!</p>
+    <a href="#games" class="hero-btn">🎮 Explore Games</a>
 </header>
 
-<!-- Games Section -->
-<section class="games-section" id="games">
+<section id="games">
+    <h2 style="text-align:center; margin-bottom:30px; font-size:2rem; background: linear-gradient(90deg,#00f5a0,#00d9f5); -webkit-background-clip:text; -webkit-text-fill-color:transparent;">
+        Featured Games
+    </h2>
     <div class="games-grid">
 
         <!-- Idle Miner Tycoon -->
-        <div class="game-card" data-aos="fade-up">
-            <div class="game-image">
-                <a href="https://appslocked.com/cl/i/qk7gn4">
-                    <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/logo.png" alt="Idle Miner Tycoon">
-                </a>
-            </div>
+        <div class="game-card">
+            <a href="https://appslocked.com/cl/i/qk7gn4">
+                <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/logo.png" alt="Idle Miner Tycoon">
+            </a>
             <div class="game-content">
                 <h2>Idle Miner Tycoon</h2>
-                <p>Automate your mines, hire managers, and scale production. Optimize logistics and watch profits grow endlessly.</p>
-                <a href="https://appslocked.com/cl/i/qk7gn4" class="download-btn">⬇ Download</a>
+                <p>Automate your mines, hire managers, and scale production across the world. Watch the profits grow!</p>
+                <a href="https://appslocked.com/cl/i/qk7gn4" class="download-btn">⬇️ Download</a>
             </div>
         </div>
 
         <!-- Prison Empire Tycoon -->
-        <div class="game-card" data-aos="fade-up" data-aos-delay="150">
-            <div class="game-image">
-                <a href="https://appverification.net/cl/i/xpvvkj">
-                    <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/unnamed.jpg" alt="Prison Empire Tycoon">
-                </a>
-            </div>
+        <div class="game-card">
+            <a href="https://appverification.net/cl/i/xpvvkj">
+                <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/unnamed.jpg" alt="Prison Empire Tycoon">
+            </a>
             <div class="game-content">
                 <h2>Prison Empire Tycoon</h2>
-                <p>Build and upgrade your prison. Manage staff, keep order, and expand your empire while maximizing income.</p>
-                <a href="https://appverification.net/cl/i/xpvvkj" class="download-btn">⬇ Download</a>
+                <p>Build and manage your own prison. Keep inmates under control while expanding your empire!</p>
+                <a href="https://appverification.net/cl/i/xpvvkj" class="download-btn">⬇️ Download</a>
             </div>
         </div>
 
         <!-- Idle Police Tycoon -->
-        <div class="game-card" data-aos="fade-up" data-aos-delay="300">
-            <div class="game-image">
-                <a href="https://appinstallcheck.com/cl/i/1x55kk">
-                    <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/i.jpeg" alt="Idle Police Tycoon">
-                </a>
-            </div>
+        <div class="game-card">
+            <a href="https://appinstallcheck.com/cl/i/1x55kk">
+                <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/i.jpeg" alt="Idle Police Tycoon">
+            </a>
             <div class="game-content">
                 <h2>Idle Police Tycoon</h2>
-                <p>Manage a police station, respond to cases, upgrade facilities, and protect the city while growing profits.</p>
-                <a href="https://appinstallcheck.com/cl/i/1x55kk" class="download-btn">⬇ Download</a>
+                <p>Run the police station, fight crime, and upgrade departments to protect the city!</p>
+                <a href="https://appinstallcheck.com/cl/i/1x55kk" class="download-btn">⬇️ Download</a>
             </div>
         </div>
 
         <!-- Idle Barber Shop Tycoon -->
-        <div class="game-card" data-aos="fade-up" data-aos-delay="450">
-            <div class="game-image">
-                <a href="https://appverification.net/cl/i/o4xxd4">
-                    <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/IMG_20250816_000958.jpg" alt="Idle Barber Shop Tycoon">
-                </a>
-            </div>
+        <div class="game-card">
+            <a href="https://appverification.net/cl/i/o4xxd4">
+                <img src="https://raw.githubusercontent.com/tryinggamess/TEST/main/IMG_20250816_000958.jpg" alt="Idle Barber Shop Tycoon">
+            </a>
             <div class="game-content">
                 <h2>Idle Barber Shop Tycoon</h2>
-                <p>Run your own barbershop, attract customers, upgrade tools, and build a stylish empire in the city.</p>
-                <a href="https://appverification.net/cl/i/o4xxd4" class="download-btn">⬇ Download</a>
+                <p>Start your barbershop, unlock new hairstyles, and grow your business empire!</p>
+                <a href="https://appverification.net/cl/i/o4xxd4" class="download-btn">⬇️ Download</a>
             </div>
         </div>
 
     </div>
 </section>
 
-<!-- Footer -->
-<footer id="contact">
-    © 2025 Idle Tycoon Hub. All rights reserved.
-</footer>
-
-<!-- AOS Script -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init({
-    duration: 1000,
-    once: true
-  });
-</script>
 </body>
 </html>
